fixed header alignments

--- a/style.css
+++ b/style.css
@@ -148,6 +148,13 @@ body .wrapper #wedding header {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-column: 1 / 5;
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: #fff;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2))), url("/images/wedding.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.2)), url("/images/wedding.jpg");
@@ -176,14 +183,14 @@ body .wrapper #wedding .location {
 
 body .wrapper #wedding .ceremony {
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / 3;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
 }
 
 body .wrapper #wedding .reception {
-  -ms-grid-column: 3;
-  -ms-grid-column-span: 2;
-  grid-column: 3 / 5;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / 5;
 }
 
 body .wrapper #wedding .hotels {
@@ -215,6 +222,13 @@ body .wrapper #rsvp {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-column: 1 / 5;
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   color: #fff;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2))), url("/images/rsvp.jpg");
   background: linear-gradient(rgba(0, 0, 0, 0.2)), url("/images/rsvp.jpg");
@@ -287,6 +301,7 @@ html body h1, html body h2, html body h3, html body h4, html body h5 {
   font-family: 'Peddana', serif;
   font-weight: 400;
   line-height: 1.15;
+  margin: 0;
 }
 
 html body h1 {
