--- a/style/_layout.scss
+++ b/style/_layout.scss
@@ -90,6 +90,9 @@ body {
             display: grid;
             header {
                 grid-column: 1 / 5;
+                display: grid;
+                align-content: center;
+                justify-content: center;
                 color: $white;
                 background: linear-gradient(rgba($black, 0.20)), url("/images/wedding.jpg");
                 background-size: cover;
@@ -110,10 +113,10 @@ body {
                 grid-column: 1 / 5;
             }
             .ceremony {
-                grid-column: 1 / 3;
+                grid-column: 1 / 5;
             }
             .reception {
-                grid-column: 3 / 5;
+                grid-column: 1 / 5;
             }
             .hotels {
                 grid-column: 1 / 5;
@@ -133,6 +136,9 @@ body {
         }
         #rsvp {
             grid-column: 1 / 5;
+            display: grid;
+            align-content: center;
+            justify-content: center;
             color: $white;
             background: linear-gradient(rgba($black, 0.20)), url("/images/rsvp.jpg");
             background-size: cover;
