--- a/style/_typography.scss
+++ b/style/_typography.scss
@@ -16,6 +16,7 @@ html {
             font-family: 'Peddana', serif;
             font-weight: 400;
             line-height: 1.15;
+            margin: 0;
         }
         h1 {
             font-size: 3.052rem;
